--- a/ostore-stock/src/main/resources/sop.properties
+++ b/ostore-stock/src/main/resources/sop.properties
@@ -3,9 +3,9 @@
 #服务地址
 HOST=@db.SOP.HOST@
 #supplier key
-APP_KEY=10
+APP_KEY=8353086ab69f4840876abdf52e2d6746
 #supplier secret
-APP_SECRET =5
+APP_SECRET =1d90dae197f14b0f9abbe5746bec57d7
 
 
 
