--- a/spinnaker/build.gradle
+++ b/spinnaker/build.gradle
@@ -35,6 +35,6 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.spinnaker.stock.StartSkuJob'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. conf ' + manifestCp
+        attributes 'Class-Path': '.  ' + manifestCp
     }
 }
