--- a/openapi-ice/build.gradle
+++ b/openapi-ice/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     compile(
             "ZeroC:Ice:3.5.1",
 			"commons-collections:commons-collections:3.2.1",
+            project(':iog-common-product') ,
 			project(":project-framework")
     )
 }
