价格体系重新修改

--- a/ebay/build.gradle
+++ b/ebay/build.gradle
@@ -12,7 +12,7 @@ dependencies {
 		"com.ebay.sdk:ebaysdkcore:1.0",
 		"org.apache.servicemix.bundles:org.apache.servicemix.bundles.oro:2.0.8_6",
 		project(":iog-common-product"),
-			project(":project-dao"),
+			project(':openapi-ice')
 		)
     testCompile (
 		'junit:junit:4.+',
