--- a/iog-common-product/build.gradle
+++ b/iog-common-product/build.gradle
@@ -3,8 +3,8 @@ dependencies {
     compile(
             project(':project-common'),
             project(':iog-service'),
-            project(':project-dao'),
-            project(':openapi-ice')
+            project(':project-dao')
+
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
