--- a/galiano-stock/build.gradle
+++ b/galiano-stock/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     compile(
             project(':project-common'),
 
-            project(':iog-sop')
+            project(':openapi-ice')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
