--- a/leam/build.gradle
+++ b/leam/build.gradle
@@ -8,7 +8,7 @@ dependencies {
             project(':project-common'),
 
             project(':iog-common-product') ,
-            project(':openapi-ice')
+            project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
