--- a/gilt/build.gradle
+++ b/gilt/build.gradle
@@ -14,7 +14,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -23,6 +24,6 @@ jar {
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.gilt.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
