--- a/tessabit-stock/src/main/resources/conf.properties
+++ b/tessabit-stock/src/main/resources/conf.properties
@@ -1,2 +1,16 @@
-#
-supplierId=2015081701443
+#供应商ID
+supplierId=201509111122
+#FTP服务器hostname
+url=partners.tessabit.biz
+#FTP服务器根目录
+remotePath=/
+#FTP服务器端口
+port=21
+#用户名
+user=defaultmasatoh1
+#密码
+password=15201108!m
+#服务器端文件名(包括完整路径)
+serverFile=Products.xml
+#本地文件名(包括完整路径)
+localFile=E:/2.xml
