--- a/iog-facade-dubbo/build.gradle
+++ b/iog-facade-dubbo/build.gradle
@@ -1,13 +1,33 @@
-version '1.0'
 
-apply plugin: 'java'
-
-sourceCompatibility = 1.5
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
+    compile(
+            "org.apache.zookeeper:zookeeper:3.4.6",
+            "com.github.sgroschupf:zkclient:0.1",
+            "com.alibaba:dubbo:2.8.4",
+
+
+            project(':iog-facade-impl')
+
+
+    )
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+jar {
+
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties","**/*.xml")
+
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shang.iog.facade.dubbo.Startup'
+//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+    }
 }
