--- a/iog-facade-impl/build.gradle
+++ b/iog-facade-impl/build.gradle
@@ -2,8 +2,8 @@
 dependencies{
         compile(
                 "com.alibaba:dubbo:2.8.4",
-                "org.springframework:spring-core:4.1.6.RELEASE",
-                "org.springframework:spring-web:4.1.6.RELEASE",
+                "org.springframework:spring-core:${springVersion}",
+                "org.springframework:spring-web:${springVersion}",
                 "org.javassist:javassist:3.18.1-GA",
                 "org.jboss.resteasy:resteasy-jaxrs:3.0.7.Final",
                 "org.jboss.resteasy:resteasy-client:3.0.7.Final",
