修改供货商编号

--- a/tessabit/src/main/resources/conf.properties
+++ b/tessabit/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 #供应商ID
-supplierId=201509111122
+supplierId=2015091701503
 #FTP服务器hostname
 url=partners.tessabit.biz
 #FTP服务器根目录
@@ -13,4 +13,4 @@ password=15201108!m
 #服务器端文件名(包括完整路径)
 serverFile=Products.xml
 #本地文件名(包括完整路径)
-localFile=E:/3.xml
+localFile=E:/tessabit.xml
