--- a/iog-facade-dubbo/src/main/resources/log4j.properties
+++ b/iog-facade-dubbo/src/main/resources/log4j.properties
@@ -5,12 +5,12 @@ log4j.appender.spring.layout=org.apache.log4j.PatternLayout
 log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 
 #通用日志配置
-log4j.rootCategory=ERROR, file
+log4j.rootCategory=INFO, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
 log4j.appender.file.File=log/facade-dubbo-logs.log
 log4j.appender.file.Append=true
-log4j.appender.file.MaxFileSize=1MB
+log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=0
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
@@ -38,7 +38,7 @@ log4j.logger.error=ERROR, error
 #规定每天产生日志的格式
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.error.Encoding=UTF-8
-log4j.appender.error.File=log/acanfora-stock-error.log
+log4j.appender.error.File=log/facade-dubbo-error.log
 log4j.appender.error.Append=true
 log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
