把资源包复制到classes/main下

--- a/project-dao/build.gradle
+++ b/project-dao/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 }
 
 task copyResourcesToClasses( type: Copy ) {
-    into "$buildDir/classes"
+    into "$buildDir/classes/main"
     from "$buildDir/resources/main"
 }
 
