--- a/settings.gradle
+++ b/settings.gradle
@@ -56,4 +56,11 @@ include 'bagheera'
 include 'gilt-stock'
 include 'gilt-purchase'
 include 'tony'
+include 'tessabit'
+include 'tessabit-stock'
+include 'Test'
+include 'marylou'
+include 'marylou-stock'
+include 'onsite'
+include 'tony-stock'
 
