--- a/onsite/src/main/resources/conf.properties
+++ b/onsite/src/main/resources/conf.properties
@@ -2,6 +2,8 @@
 supplierId=2015091701503
 #供应商IDMarylou
 supplierIdMarylou=201509210918
+#供应商IDTony
+supplierIdTony=201509221014
 #FTP服务器hostname
 url=partners.tessabit.biz
 #FTP服务器根目录
