--- a/tessabit-stock/build.gradle
+++ b/tessabit-stock/build.gradle
@@ -23,11 +23,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-
-//    }
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -36,7 +33,7 @@ jar {
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.tessabit.stock.TessabitStockImp'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+
+        attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
     }
 }
