添加项目include配置

--- a/settings.gradle
+++ b/settings.gradle
@@ -68,4 +68,5 @@ include 'marylou'
 include 'marylou-stock'
 include 'onsite'
 include 'tony-stock'
-
+include 'stefaniamode'
+include 'stefaniamode-stock'
