--- a/dante5-stock/build.gradle
+++ b/dante5-stock/build.gradle
@@ -1,13 +1,28 @@
-version '1.0'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.5
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
+    compile(
+            project(':project-common'),
+            project(':openapi-ice')
+    )
+    compile 'com.stanfy:gson-xml-java:0.1.+'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'kxml2:kxml2:2.3.0'
+    compile project(':dante5')
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+jar {
+    dependsOn copyToLib
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.Startup'
+        attributes 'Class-Path': '. ' +  manifestCp
+    }
+}
+
+
