--- a/giglio-stock/src/main/resources/conf.properties
+++ b/giglio-stock/src/main/resources/conf.properties
@@ -1,2 +1,4 @@
-#supplierId = "2015091801508"; //正式
-supplierId = "2015092301114"; //测试
+supplierId=2015091801508
+
+#test
+#supplierId=2015092301114
