--- a/leam/build.gradle
+++ b/leam/build.gradle
@@ -6,9 +6,7 @@ dependencies {
             "net.sf.json-lib:json-lib:2.2:jdk15",
             "com.google.code.gson:gson:2.2.2",
             project(':project-common'),
-            project(':project-dao'),
             project(':iog-common-product') ,
-            project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
@@ -17,7 +15,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -26,6 +25,6 @@ jar {
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.leam.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
