--- a/acanfora/build.gradle
+++ b/acanfora/build.gradle
@@ -14,7 +14,26 @@ dependencies {
 
 }
 
+jar {
 
+    dependsOn copyToLib
+//    exclude ("**/*.properties")
+//    from {
+//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+
+//    }
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.acanfora.Startup'
+//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
+        attributes 'Class-Path': '. ' +  manifestCp
+    }
+}
 
 
 
