--- a/settings.gradle
+++ b/settings.gradle
@@ -56,19 +56,12 @@ include 'bagheera'
 include 'gilt-stock'
 include 'gilt-purchase'
 include 'tony'
-include 'dante5'
-include 'dellogliostore'
-include 'giglio'
-include 'giglio-stock'
-include 'dante5-stock'
 include 'tessabit'
 include 'tessabit-stock'
-include 'Test'
 include 'marylou'
 include 'marylou-stock'
 include 'onsite'
 include 'tony-stock'
-include 'stefaniamode'
-include 'stefaniamode-stock'
-include 'leam-stock'
+include 'atelier'
+include 'alducadaosta'
 
