--- a/stefaniamode-stock/src/main/resources/conf.properties
+++ b/stefaniamode-stock/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
 #stefaniamode的供应商id=2015092401528
 supplierId=2015092401528
 #需要定期更换应季商品地址
-zipUrl=http://xmag2014.stefaniamode.it/doc/Export_xmlProducer_xiu077.zip
+zipUrl=http://xmag2014.stefaniamode.it/doc/liste_077.zip
