--- a/bagheera/src/main/resources/param.properties
+++ b/bagheera/src/main/resources/param.properties
@@ -1,2 +1,2 @@
 path=E:/BagheeraBoutiqueLaso
-url=http://www.bagheeraboutique.com/en-US/home/laso
+url=http://www.bagheeraboutique.com/en-US/home/shangpin
