--- a/settings.gradle
+++ b/settings.gradle
@@ -62,6 +62,7 @@ include 'marylou'
 include 'marylou-stock'
 include 'onsite'
 include 'tony-stock'
+include 'tony-purchase'
 include 'atelier'
 include 'alducadaosta'
 include 'fashionesta'
