--- a/fashionesta/build.gradle
+++ b/fashionesta/build.gradle
@@ -13,7 +13,8 @@ dependencies {
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
             project(':project-dao'),
-            project(':iog-common-product')
+            project(':iog-common-product'),
+            project(':fashionesta-stock')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
