--- a/fashionesta-stock/build.gradle
+++ b/fashionesta-stock/build.gradle
@@ -13,7 +13,7 @@ dependencies {
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
             project(':project-dao'),
-            project(':iog-common-product')
+            project(':iog-common-product'),
             project(':openapi-ice')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
