--- a/bagheera-stock/build.gradle
+++ b/bagheera-stock/build.gradle
@@ -7,8 +7,7 @@ dependencies {
             "org.springframework:spring-web:4.1.6.RELEASE",
             project(':project-common'),
             project(':openapi-ice'),
-            project(':iog-common-product'),
-            project(':bagheera-stock')
+            project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
