--- a/bagheera/src/main/resources/param.properties
+++ b/bagheera/src/main/resources/param.properties
@@ -1,3 +1,3 @@
 path=E:/BagheeraBoutiqueLaso
 url=http://www.bagheeraboutique.com/en-US/home/shangpin
-supplierid=201509091712
+supplierId=201509091712
