--- a/giglio/build.gradle
+++ b/giglio/build.gradle
@@ -1,11 +1,8 @@
 
 dependencies {
     compile(
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
+
             project(':project-common'),
-            project(':project-dao'),
             project(':iog-common-product')
     )
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
@@ -14,7 +11,8 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -22,8 +20,8 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.giglio.Startup'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
