--- a/marylou/build.gradle
+++ b/marylou/build.gradle
@@ -17,4 +17,24 @@ dependencies {
             project(':project-dao'),
             project(':iog-common-product')
     )
+
+}
+
+
+jar {
+
+        dependsOn copyToLib , copyResources
+        exclude ("**/*.properties")
+
+
+        def manifestCp = configurations.compile.files.collect  {
+                File file = it
+                "lib/${file.name}"
+        }.join(' ')
+
+        manifest {
+                attributes 'Main-Class': ' com.shangpin.iog.marylou.StartSkuJob'
+//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
+                attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        }
 }
