--- a/bagheera/build.gradle
+++ b/bagheera/build.gradle
@@ -17,7 +17,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -25,7 +26,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.gilt.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.bagheera.Startup'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
