--- a/bagheera/src/main/resources/param.properties
+++ b/bagheera/src/main/resources/param.properties
@@ -1,3 +1,3 @@
-path=E:/BagheeraBoutiqueLaso
+path=/usr/local/app/bagheera/BagheeraBoutiqueLaso
 url=http://www.bagheeraboutique.com/en-US/home/shangpin
 supplierId=201509091712
