--- a/atelier/src/main/resources/conf.properties
+++ b/atelier/src/main/resources/conf.properties
@@ -1,16 +1,8 @@
 #供应商ID
 supplierId=2015091701503
-#FTP服务器hostname
-url=partners.tessabit.biz
-#FTP服务器根目录
-remotePath=/
-#FTP服务器端口
-port=21
-#用户名
-user=defaultmasatoh1
-#密码
-password=15201108!m
-#服务器端文件名(包括完整路径)
-serverFile=Products.xml
-#本地文件名(包括完整路径)
-localFile=~/job/tessabit/tessabit.xml
+#本地文件名:所有产品信息(包括完整路径)
+items=e:/atelier/items.xml
+#本地文件名：所有库存(包括完整路径)
+availability=e:/atelier/availability.xml
+#本地文件名：所有图片(包括完整路径)
+image=e:/atelier/image.xml
