--- a/settings.gradle
+++ b/settings.gradle
@@ -64,7 +64,16 @@ include 'onsite'
 include 'tony-stock'
 include 'stefaniamode'
 include 'stefaniamode-stock'
-include 'dellogliostore-stock'
 include 'atelier'
 include 'alducadaosta'
+include 'eleonorabonucci'
+include 'eleonorabonucci-stock'
+include 'giglio'
+include 'giglio-stock'
+include 'dante5'
+include 'dante5-stock'
+include 'dellogliostore'
+include 'dellogliostore-stock'
+include 'cirillomoda'
+include 'cirillomoda-stock'
 
