--- a/dante5-stock/build.gradle
+++ b/dante5-stock/build.gradle
@@ -20,7 +20,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.dante5.Startup'
         attributes 'Class-Path': '. ' +  manifestCp
     }
 }
