--- a/dellogliostore-stock/build.gradle
+++ b/dellogliostore-stock/build.gradle
@@ -1,13 +1,23 @@
-version '1.0'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.5
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
+    compile(
+            project(':project-common'),
+            project(':openapi-ice')
+    )
+    compile project(':dellogliostore')
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+jar {
+    dependsOn copyToLib
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.Startup'
+        attributes 'Class-Path': '. ' +  manifestCp
+    }
 }
