--- a/giglio-stock/build.gradle
+++ b/giglio-stock/build.gradle
@@ -18,7 +18,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.acanfora.stock.GrabStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.giglio.stock.GrabStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
