--- a/giglio/build.gradle
+++ b/giglio/build.gradle
@@ -20,7 +20,7 @@ jar {
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.giglio.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
