--- a/tessabit-stock/build.gradle
+++ b/tessabit-stock/build.gradle
@@ -4,15 +4,15 @@ dependencies {
     compile(
             "commons-httpclient:commons-httpclient:3.1",
             "org.apache.httpcomponents:httpclient:4.1.1",
-            /*"org.apache.poi:poi:3.0.1-FINAL",*/
             "org.projectlombok:lombok:1.14.8",
-            /*"redis.clients:jedis:${jedis_version}",*/
-            /*"com.thoughtworks.xstream:xstream:1.4.7",*/
             "commons-net:commons-net:1.4.1",
             "org.jdom:jdom:2.0.2",
             "com.enterprisedt:edtFTPj:1.5.3",
-            project(':tessabit'),
-            project(':openapi-ice')
+            "org.jdom:jdom:2.0.2",
+            "dom4j:dom4j:1.6.1",
+            project(':openapi-ice'),
+            project(':project-common'),
+            project(':iog-common-product')
     )
 
 
