1、增加下单抽象类 2、增加尚品SKU和供货商的SKU对照关系

--- a/openapi-ice/build.gradle
+++ b/openapi-ice/build.gradle
@@ -9,9 +9,10 @@ repositories {
 
 dependencies {
     compile(
+            "com.google.code.gson:gson:2.2.2",
             "ZeroC:Ice:3.5.1",
 			"commons-collections:commons-collections:3.2.1",
-//            project(':iog-common-product') ,
+            project(':iog-common-product') ,
 			project(":project-framework")
     )
 }
