完成cirillomoda商品拉取.

--- a/settings.gradle
+++ b/settings.gradle
@@ -71,7 +71,16 @@ include 'bagheera-stock'
 include 'itemInfo'
 include 'atelier-stock'
 
+include 'dante5'
+include 'dante5-stock'
 include 'giglio'
+include 'giglio-stock'
+include 'dellogliostore'
+include 'dellogliostore-stock'
+include 'eleonorabonucci'
+include 'eleonorabonucci-stock'
+include 'cirillomoda'
+include 'cirillomoda-stock'
 
 include 'atelier-purchase'
 include 'prodottimonti'
