--- a/cirillomoda/build.gradle
+++ b/cirillomoda/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
