--- a/linoricci/src/main/resources/conf.properties
+++ b/linoricci/src/main/resources/conf.properties
@@ -11,10 +11,10 @@ user=lino75ricci
 #密码
 password=Hlf^g855
 #服务器端文件名(包括完整路径)
-serverItemsFile=Prodotti_EN.xml
+serverItemsFile=Prodotti.xml
 serverStockFile=Disponibilita.xml
 serverImageFile=Riferimenti.xml
 #本地文件名(包括完整路径)
-localItemsFile=E:/linoricci/Prodotti_EN.xml
+localItemsFile=E:/linoricci/Prodotti.xml
 localStockFile=E:/linoricci/Disponibilita.xml
 localImageFile=E:/linoricci/Riferimenti.xml
