--- a/settings.gradle
+++ b/settings.gradle
@@ -51,7 +51,7 @@ include 'sanremo-stock'
 include 'iog-web-tmp'
 include 'iog-sop'
 include 'iog-facade-dubbo'
-//include 'gilt-order'
+include 'gilt-order'
 include 'bagheera'
 include 'gilt-stock'
 include 'gilt-purchase'
@@ -64,7 +64,9 @@ include 'onsite'
 include 'tony-stock'
 include 'tony-purchase'
 include 'atelier'
-//include 'alducadaosta'
+include 'alducadaosta'
 include 'fashionesta'
 include 'fashionesta-stock'
 include 'itemInfo'
+include 'itemInfo-stock'
+//include 'itemInfo-purchase'
