--- a/linoricci-stock/src/main/resources/confs.properties
+++ b/linoricci-stock/src/main/resources/confs.properties
@@ -11,10 +11,11 @@ user=lino75ricci
 #密码
 password=Hlf^g855
 #服务器端文件名(包括完整路径)
-serverItemsFile=Prodotti.xml
+serverItemsFilebk=Prodotti.xml
+serverItemsFile=Mercati.xml
 serverStockFile=Disponibilita.xml
 serverImageFile=Riferimenti.xml
 #本地文件名(包括完整路径)
-localItemsFile=E:/linoricci/Prodotti.xml
-localStockFile=E:/linoricci/Disponibilita.xml
-localImageFile=E:/linoricci/Riferimenti.xml
+localItemsFile=E:/linoricci/Mercati.xml
+localStockFile=E:/linoricci/Disponibilita1.xml
+localImageFile=E:/linoricci/Riferimenti1.xml
