--- a/settings.gradle
+++ b/settings.gradle
@@ -51,7 +51,7 @@ include 'sanremo-stock'
 include 'iog-web-tmp'
 include 'iog-sop'
 include 'iog-facade-dubbo'
-include 'gilt-order'
+
 include 'bagheera'
 include 'gilt-stock'
 include 'gilt-purchase'
@@ -63,5 +63,6 @@ include 'marylou-stock'
 include 'onsite'
 include 'tony-stock'
 include 'atelier'
-include 'alducadaosta'
-
+include 'reebonzWiki'
+include 'reebonzWiki-stock'
+include 'reebonzWiki-order'
