--- a/levelgroup-stock/build.gradle
+++ b/levelgroup-stock/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib,copyResources, copyResourcesToClasses
 //    exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
@@ -29,6 +29,6 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.levelgroup.stock.LevelGroupStockImpl'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' + manifestCp
+        attributes 'Class-Path': '. ./conf/' + manifestCp
     }
 }
