--- a/dante5/build.gradle
+++ b/dante5/build.gradle
@@ -15,7 +15,8 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib
+    dependsOn copyToLib, copyResources, copyResourcesToClasses
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -23,8 +24,8 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.dante5.Startup'
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
