--- a/dellogliostore/build.gradle
+++ b/dellogliostore/build.gradle
@@ -15,7 +15,8 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib
+    dependsOn copyToLib, copyResources, copyResourcesToClasses
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -24,7 +25,6 @@ jar {
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
-
