--- a/eleonorabonucci/build.gradle
+++ b/eleonorabonucci/build.gradle
@@ -12,7 +12,8 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib
+    dependsOn copyToLib, copyResources, copyResourcesToClasses
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -20,8 +21,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.eleonorabonucci.Startup'
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
-
