--- a/dante5-stock/build.gradle
+++ b/dante5-stock/build.gradle
@@ -12,7 +12,8 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources    , copyResourcesToClasses
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -20,8 +21,8 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.dante5.Startup'
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.dante5.stock.GrabStockImp'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
