--- a/fashionesta-stock/build.gradle
+++ b/fashionesta-stock/build.gradle
@@ -35,8 +35,8 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.galiano.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.fashionesta.stock.StockClientImp'
 
-        attributes 'Class-Path': '. ' + manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
