--- a/tony-purchase/src/main/resources/conf.properties
+++ b/tony-purchase/src/main/resources/conf.properties
@@ -6,5 +6,5 @@ period = 30
 #MerchantId
 merchantId = 55f707f6b49dbbe14ec6354d
 #Token
-oken = d355cd8701b2ebc54d6c8811e03a3229
+token = d355cd8701b2ebc54d6c8811e03a3229
   #2015081401432
