--- a/reebonzWiki-order/build.gradle
+++ b/reebonzWiki-order/build.gradle
@@ -9,6 +9,7 @@ dependencies {
             project(':project-dao'),
             project(':onsite'),
             project(':iog-common-product'),
+               project(':openapi-ice'),
              "com.google.code.gson:gson:2.3.1",
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
