--- a/settings.gradle
+++ b/settings.gradle
@@ -89,4 +89,6 @@ include 'prodottimonti'
 include 'prodottimonti-stock'
 include 'levelgroup'
 include 'levelgroup-stock'
+include 'linoricci'
+include 'linoricci-stock'
 
