--- a/settings.gradle
+++ b/settings.gradle
@@ -92,3 +92,5 @@ include 'levelgroup-stock'
 include 'reebonzWiki'
 include 'reebonzWiki-order'
 include 'reebonzWiki-stock'
+include 'linoricci'
+include 'linoricci-stock'
