--- a/settings.gradle
+++ b/settings.gradle
@@ -94,3 +94,5 @@ include 'reebonzWiki-order'
 include 'reebonzWiki-stock'
 include 'linoricci'
 include 'linoricci-stock'
+include 'fashionesta'
+include 'fashionesta-stock'
