--- a/settings.gradle
+++ b/settings.gradle
@@ -96,3 +96,5 @@ include 'linoricci'
 include 'linoricci-stock'
 include 'fashionesta'
 include 'fashionesta-stock'
+include 'julian-fashion'
+include 'vinicco'
