--- a/tessabit-stock/src/main/resources/conf.properties
+++ b/tessabit-stock/src/main/resources/conf.properties
@@ -13,4 +13,4 @@ password=15201108!m
 #服务器端文件名(包括完整路径)
 serverFile=Products.xml
 #本地文件名(包括完整路径)
-localFile=e:/tessabit.xml
+localFile=/home/dev/job/tessabit/tessabit.xml
