--- a/levelgroup-stock/build.gradle
+++ b/levelgroup-stock/build.gradle
@@ -15,12 +15,7 @@ dependencies {
 jar {
 
     dependsOn copyToLib,copyResources, copyResourcesToClasses
-//    exclude ("**/*.properties")
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-
-//    }
-
+    exclude ("**/*.properties")
     def manifestCp = configurations.compile.files.collect {
         File file = it
         "lib/${file.name}"
