--- a/settings.gradle
+++ b/settings.gradle
@@ -96,3 +96,6 @@ include 'linoricci'
 include 'linoricci-stock'
 include 'fashionesta'
 include 'fashionesta-stock'
+include 'monnierfreres'
+include 'monnierfreres-stock'
+
