--- a/fashionesta/bin/param.properties
+++ b/fashionesta/bin/param.properties
@@ -1,3 +1,4 @@
-path=E:/Fashionesta
+path=/usr/local/app/fashionesta/fashionesta
 url=http://integration.fashionesta.eu/shangpinmasterdata.csv
-supplierId=201509281616
+supplierId=2015092901556
+  #201509281616
