--- a/itemInfo/build.gradle
+++ b/itemInfo/build.gradle
@@ -18,11 +18,11 @@ dependencies {
 jar {
 
     dependsOn copyToLib
-//    exclude ("**/*.properties")
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    exclude ("**/*.properties")
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
-//    }
+    }
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
