--- a/prodottimonti-stock/build.gradle
+++ b/prodottimonti-stock/build.gradle
@@ -15,8 +15,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-//    exclude ("**/*.properties")
+    dependsOn copyToLib,copyResources, copyResourcesToClasses
+    exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
@@ -28,8 +28,8 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.prodottimonti.stock.LevelGroupStockImpl'
+        attributes 'Main-Class': 'com.shangpin.iog.prodottimonti.stock.ProdottimontiStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' + manifestCp
+        attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
