--- a/gherardi/build.gradle
+++ b/gherardi/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 jar {
 
     dependsOn copyToLib,copyResources, copyResourcesToClasses
-//    exclude ("**/*.properties")
+    exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
@@ -29,6 +29,6 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.gherardi.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' + manifestCp
+        attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
