--- a/monnierfreres/build.gradle
+++ b/monnierfreres/build.gradle
@@ -1,13 +1,27 @@
-version '1.0'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.5
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
+    compile(
+            project(':project-common'),
+            project(':iog-common-product')
+    )
+    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'org.apache.commons:commons-csv:1.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+jar {
+    dependsOn copyToLib , copyResources, copyResourcesToClasses
+    exclude ("**/*.properties")
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.giglio.Startup'
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
+    }
+}
+
+
