--- a/brunarosso/build.gradle
+++ b/brunarosso/build.gradle
@@ -31,11 +31,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-
-//    }
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -45,6 +42,6 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.brunarosso.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
