--- a/brunarosso/src/main/resources/param.properties
+++ b/brunarosso/src/main/resources/param.properties
@@ -3,3 +3,4 @@ latestProPath=E:/latestProXml.txt
 latestStockPath=E:/latestXml.txt
 localFilePath = E:/stockDownload/
 testFilePath=E:/TestFtpDowload/
+supplierId = 2015091801507
