--- a/tizianafausti/build.gradle
+++ b/tizianafausti/build.gradle
@@ -2,7 +2,6 @@ dependencies {
     compile(
             "org.jsoup:jsoup:1.8.3",
             project(':project-common'),
-            project(':project-dao'),
             project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
@@ -12,12 +11,9 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-//    exclude ("**/*.properties")
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
-//    }
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -25,9 +21,8 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.stefaniamode.Startup'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.tizianafausti.Startup'
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
