--- a/settings.gradle
+++ b/settings.gradle
@@ -53,7 +53,7 @@ include 'sanremo-stock'
 include 'iog-web-tmp'
 include 'iog-sop'
 include 'iog-facade-dubbo'
-include 'gilt-order'
+//include 'gilt-order'
 include 'bagheera'
 include 'bagheera-stock'
 include 'gilt-stock'
@@ -67,7 +67,7 @@ include 'onsite'
 include 'tony-stock'
 include 'tony-purchase'
 include 'atelier'
-include 'alducadaosta'
+//include 'alducadaosta'
 
 include 'bagheera-stock'
 
