--- a/itemInfo/build.gradle
+++ b/itemInfo/build.gradle
@@ -32,7 +32,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.itemInfo.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
