--- a/itemInfo/src/main/resources/log4j.properties
+++ b/itemInfo/src/main/resources/log4j.properties
@@ -8,9 +8,9 @@ log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.rootCategory=ERROR, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
-log4j.appender.file.File=log/acanfora-logs.log
+log4j.appender.file.File=log/alduca-logs.log
 log4j.appender.file.Append=true
-log4j.appender.file.MaxFileSize=1MB
+log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=0
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
@@ -23,7 +23,7 @@ log4j.logger.info=INFO, info
 #规定每天产生日志的格式
 log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.info.Encoding=UTF-8
-log4j.appender.info.File=log/acanfora-info.log
+log4j.appender.info.File=log/alduca-info.log
 log4j.appender.info.Append=true
 log4j.appender.info.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.info.MaxFileSize=1MB
@@ -38,7 +38,7 @@ log4j.logger.error=ERROR, error
 #规定每天产生日志的格式
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.error.Encoding=UTF-8
-log4j.appender.error.File=log/acanfora-error.log
+log4j.appender.error.File=log/alduca-error.log
 log4j.appender.error.Append=true
 log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
@@ -56,8 +56,8 @@ log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppend
 log4j.appender.MongoDB.databaseName=iog
 #mongodb表名
 log4j.appender.MongoDB.collectionName=operate_log
-#log4j.appender.MongoDB.hostname=@db.MongoDB.hostname@
-log4j.appender.MongoDB.hostname=192.168.20.122
+log4j.appender.MongoDB.hostname=@db.MongoDB.hostname@
+
 log4j.appender.MongoDB.port=27017
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.mongodb=false
