--- a/giglio-stock/src/main/resources/sop.properties
+++ b/giglio-stock/src/main/resources/sop.properties
@@ -3,9 +3,9 @@
 #服务地址
 HOST=@db.SOP.HOST@
 #supplier key
-APP_KEY=10
+APP_KEY=a490b887129a401f9f97ca1886c3779d
 #supplier secret
-APP_SECRET =5
+APP_SECRET =249409200b6140e8ba181bf68979baf0
 
 
 
