--- a/project-dao/src/main/resources/datasource.properties
+++ b/project-dao/src/main/resources/datasource.properties
@@ -1,15 +1,14 @@
-#db.username=@db.username@
-#db.password=@db.password@
-#db.url=@db.url@
-#db.driverClassName=@db.driverClassName@
-#
+db.username=@db.username@
+db.password=@db.password@
+db.url=@db.url@
+db.driverClassName=@db.driverClassName@
 
 
-db.driverClassName = com.mysql.jdbc.Driver
-#
-db.url =jdbc:mysql://192.168.20.82:3306/iog-test?useUnicode=true&amp;characterEncoding=utf-8
-db.username = root
-db.password = 123456
+
+#db.driverClassName = com.mysql.jdbc.Driver
+#db.url =jdbc:mysql://192.168.20.82:3306/iog-test?useUnicode=true&amp;characterEncoding=utf-8
+#db.username = root
+#db.password = 123456
 
 #db.url =jdbc:mysql://49.213.13.167:3306/iog?useUnicode=true&amp;characterEncoding=utf-8
 #db.username = shangpin
