--- a/reebonzWiki/src/main/resources/conf.properties
+++ b/reebonzWiki/src/main/resources/conf.properties
@@ -1,4 +1,7 @@
 supplierId=201509261518
+#eventUrl=http://api.reebonz.com/gate/api/shangpin/event_list
+#productUrl=http://api.reebonz.com/gate/api/shangpin/product_list
+#stockUrl=http://api.reebonz.com/gate/api/shangpin/product_qty
 eventUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/event_list
 productUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/product_list
 stockUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/product_qty
