--- a/reebonzWiki-order/bin/conf.properties
+++ b/reebonzWiki-order/bin/conf.properties
@@ -1,4 +1,5 @@
-supplierId=201509261518
+supplierId=2015092800199
+supplierNo=S0000738
 #lockStockUrl=http://ladon.titan.reebonz.com/api/eps_product_reservation
 #unlockStockUrl=http://ladon.titan.reebonz.com/api/eps_product_reservation_confirmation
 #pushOrderUrl=http://api.reebonz.com/api/order
