--- a/reebonzWiki-order/bin/log4j.properties
+++ b/reebonzWiki-order/bin/log4j.properties
@@ -5,15 +5,25 @@ log4j.appender.spring.layout=org.apache.log4j.PatternLayout
 log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 
 #通用日志配置
-log4j.rootCategory=ERROR, file
+log4j.rootCategory=DEBUG, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
 log4j.appender.file.File=log/reebonzOrder-logs.log
 log4j.appender.file.Append=true
-log4j.appender.file.MaxFileSize=1MB
+log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=0
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
+
+log4j.logger.com.apache.ibatis=DEBUG
+log4j.logger.com.apache.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.apache.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.apache.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+
+log4j.logger.java.sql.Connection = DEBUG
+log4j.logger.java.sql.Statement = DEBUG
+log4j.logger.java.sql.PreparedStatement = DEBUG
+log4j.logger.java.sql.ResultSet = DEBUG
 
 #自定义日志，使用方式
 #private static Logger logger = Logger.getLogger("info");
