--- a/gilt-stock/build.gradle
+++ b/gilt-stock/build.gradle
@@ -13,10 +13,9 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib,copyResources, copyResourcesToClasses
     exclude ("**/*.properties")
-
-    def manifestCp = configurations.compile.files.collect  {
+    def manifestCp = configurations.compile.files.collect {
         File file = it
         "lib/${file.name}"
     }.join(' ')
