--- a/reebonzWiki/build.gradle
+++ b/reebonzWiki/build.gradle
@@ -18,5 +18,20 @@ dependencies {
 
 
 
+jar {
+    dependsOn copyToLib, copyResources, copyResourcesToClasses
+    exclude ("**/*.properties")
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.reebonzWiki.StartSkuJob'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+    }
+}
+
 
 
