--- a/gilt-purchase/src/main/resources/conf.properties
+++ b/gilt-purchase/src/main/resources/conf.properties
@@ -1,7 +1,8 @@
 #
 supplierId=2015090900158
 key = fb8ea6839b486dba8c5cabb374c03d9d
-
+url=https://api-sandbox.gilt.com
+#https://api.gilt.com
 #分总
 confirmTime=30
   #2015081401432
