--- a/gilt/src/main/resources/conf.properties
+++ b/gilt/src/main/resources/conf.properties
@@ -1,3 +1,7 @@
-#
+
 supplierId=2015081401432
-key = fb8ea6839b486dba8c5cabb374c03d9d
+key=3d505d9fa5dda757d9145d53a61cbf46
+url=https://api.gilt.com
+saleId=1126643269,1126645281
+
+ #fb8ea6839b486dba8c5cabb374c03d9d
