--- a/reebonzWiki-order/bin/conf.properties
+++ b/reebonzWiki-order/bin/conf.properties
@@ -27,13 +27,14 @@ wmsUrl=http://spwmsinventory.spidc1.com
 #accessTokenUrl=http://oauth.uat.titan.reebonz-dev.com/api/retrieve_token.json
 #refreshTokenUrl=http://oauth.uat.titan.reebonz-dev.com/api/refresh_token.json
 #requestSourceUrl=http://oauth.uat.titan.reebonz-dev.com/api/request_resource.json
+#wmsUrl=http://wmsinventory.liantiao.com
 #
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
 fromUserPassword=lzr0lzr
 to=qiujunwei@shangpin.com
+#to=zhaogenchun@shangpin.com
 subject=reebonz\u8BA2\u5355\u5F02\u5E38
 messageText=
 messageType=text/html;charset=utf-8
-time=1000*60*60*2
-#wmsUrl=http://wmsinventory.liantiao.com
+time=3600000
