--- a/reebonzWiki-stock/src/main/resources/conf.properties
+++ b/reebonzWiki-stock/src/main/resources/conf.properties
@@ -1,3 +1,5 @@
-supplierId=2015101001584
 stockUrl=http://api.reebonz.com/gate/api/shangpin/product_qty
+supplierId=2015101001584
+
+#supplierId=2015092800199
 #stockUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/product_qty
