--- a/reebonzWiki/src/main/resources/conf.properties
+++ b/reebonzWiki/src/main/resources/conf.properties
@@ -1,8 +1,10 @@
-supplierId=2015092800199
+supplierId=2015101001584
 eventUrl=http://api.reebonz.com/gate/api/shangpin/event_list
 productUrl=http://api.reebonz.com/gate/api/shangpin/product_list
 stockUrl=http://api.reebonz.com/gate/api/shangpin/product_qty
+rows=10
+
+#supplierId=2015092800199
 #eventUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/event_list
 #productUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/product_list
 #stockUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/product_qty
-rows=10
