--- a/settings.gradle
+++ b/settings.gradle
@@ -133,3 +133,5 @@ include 'monnierfreres'
 include 'monnierfreres-stock'
 
 include 'iog-price'
+include 'theclutcher'
+include 'theclutcher-stock'
