--- a/bagheera/src/main/resources/param.properties
+++ b/bagheera/src/main/resources/param.properties
@@ -1,3 +1,4 @@
 path=/usr/local/app/bagheera/BagheeraBoutiqueLaso
-url=http://www.bagheeraboutique.com/en-US/home/shangpin
+url=http://www.bagheeraboutique.com/it-IT/product/14022
+  #http://www.bagheeraboutique.com/en-US/home/shangpin
 supplierId=2015100701573
