--- a/bagheera-stock/build.gradle
+++ b/bagheera-stock/build.gradle
@@ -16,7 +16,9 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
+
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -24,7 +26,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.gilt.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.bagheera.stock.StockClientImp'
         attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
