--- a/bagheera-stock/src/main/resources/param.properties
+++ b/bagheera-stock/src/main/resources/param.properties
@@ -1,3 +1,3 @@
-path=E:/BagheeraBoutiqueLaso
-url=http://www.bagheeraboutique.com/en-US/home/shangpin
+path=/usr/local/appstock/bagheera/BagheeraBoutiqueLaso
+url=http://www.bagheeraboutique.com/it-IT/product/14022
 supplierId=2015100701573
