--- a/settings.gradle
+++ b/settings.gradle
@@ -152,6 +152,8 @@ include 'theclutcher'
 include 'theclutcher-stock'
 include 'filippo'
 include 'filippo-stock'
+include 'forzieri'
+include 'forzieri-stock'
 include 'hovok-stock'
 include 'tony-fetchstock'
 
