--- a/tony-purchase/src/main/resources/conf.properties
+++ b/tony-purchase/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
-#
-supplierId=2015090900158
+supplierId=2015092800207
+supplierNo=S0000744
 key = fb8ea6839b486dba8c5cabb374c03d9d
 #/minute
 period = 30
@@ -8,3 +8,7 @@ merchantId = 55f707f6b49dbbe14ec6354d
 #Token
 token = d355cd8701b2ebc54d6c8811e03a3229
   #2015081401432
+#sandbox environment
+url=http://ec2-52-31-11-83.eu-west-1.compute.amazonaws.com/ws/
+#Formal environment
+#url=http://www.cs4b.eu/ws/
