--- a/settings.gradle
+++ b/settings.gradle
@@ -44,6 +44,7 @@ include 'lino'
 include 'lino-stock'
 include 'ostore'
 include 'channeladvisor'
+include 'channeladvisor-stock'
 include 'ostore-stock'
 include 'leam'
 include 'leam-stock'
