--- a/theclutcher-stock/src/main/resources/sop.properties
+++ b/theclutcher-stock/src/main/resources/sop.properties
@@ -3,9 +3,13 @@
 #服务地址
 HOST=@db.SOP.HOST@
 #supplier key
-APP_KEY=8353086ab69f4840876abdf52e2d6746
+APP_KEY=6327ccd73b584d6082955d536ec12690
 #supplier secret
-APP_SECRET =1d90dae197f14b0f9abbe5746bec57d7
+APP_SECRET =c0b555b7d20247678efd565d0fe2ff32
+
+
+supplierId=2015102201625
+local.filePath=E\:\\lubaijiang
 
 
 
