--- a/settings.gradle
+++ b/settings.gradle
@@ -146,8 +146,8 @@ include 'monnierfreres'
 include 'monnierfreres-stock'
 
 include 'iog-price'
-include 'articoli'
-include 'articoli-stock'
+//include 'articoli'
+//include 'articoli-stock'
 
 include 'theclutcher'
 include 'theclutcher-stock'
