--- a/forzieri/src/main/resources/param.properties
+++ b/forzieri/src/main/resources/param.properties
@@ -1,4 +1,4 @@
-#path=/usr/local/app/forzieri/forzieri
-path=F:/sossoso/forzieri
+path=/usr/local/app/forzieri/forzieri
+#path=F:/sossoso/forzieri
 url=http://www.forzieri.com/productfeed/shangpin/data_feed.csv
 supplierId=2015103001637
