--- a/forzieri-purchase/src/main/resources/param.properties
+++ b/forzieri-purchase/src/main/resources/param.properties
@@ -8,3 +8,7 @@ clientsecret=3a94fc2d2023d7bcac8e582c52510cfc4910aff2
 username=shangpin
 password=buEG?eG9$pRPZFx6EXrtqsDm
 time=60
+#tokenurl=https://api.forzieri.com/test/token
+tokenurl=https://api.forzieri.com/v2/oauth/token
+#orderurl=https://api.forzieri.com/test/orders
+orderurl=https://api.forzieri.com/v2/orders
