--- a/forzieri-stock/src/main/resources/param.properties
+++ b/forzieri-stock/src/main/resources/param.properties
@@ -6,5 +6,7 @@ clientId=NTYzMGFmMmQ3MTY4ZDhk
 clientsecret=3a94fc2d2023d7bcac8e582c52510cfc4910aff2
 username=shangpin
 password=buEG?eG9$pRPZFx6EXrtqsDm
+#tokenurl=https://api.forzieri.com/test/token
 tokenurl=https://api.forzieri.com/v2/oauth/token
+#producturl=https://api.forzieri.com/test/products
 producturl=https://api.forzieri.com/v2/products
