增加直接更新库存程序 临时保存

--- a/leam-stock/src/main/resources/log4j.properties
+++ b/leam-stock/src/main/resources/log4j.properties
@@ -29,7 +29,7 @@ log4j.appender.info.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.info.MaxFileSize=1MB
 #log4j.appender.info.MaxBackupIndex=2
 log4j.appender.info.layout=org.apache.log4j.PatternLayout
-log4j.appender.info.layout.ConversionPattern=\r\n--------Start----------\r\n[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n\r\n----------End---------\r\n
+log4j.appender.info.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.info=false
 
@@ -44,7 +44,7 @@ log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
 #log4j.appender.error.MaxBackupIndex=2
 log4j.appender.error.layout=org.apache.log4j.PatternLayout
-log4j.appender.error.layout.ConversionPattern=\r\n--------Start----------\r\n[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n\r\n----------End---------\r\n
+log4j.appender.error.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.error=false
 
