--- a/settings.gradle
+++ b/settings.gradle
@@ -45,6 +45,7 @@ include 'lino-stock'
 include 'ostore'
 include 'channeladvisor'
 include 'channeladvisor-stock'
+include 'channeladvisor-purchase'
 include 'ostore-stock'
 include 'leam'
 include 'leam-stock'
