--- a/itemInfo-purchase/src/main/resources/conf.properties
+++ b/itemInfo-purchase/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 #
 supplierId=2015101001588
 key = fb8ea6839b486dba8c5cabb374c03d9d
-jobs.schedule=0/20 * * * * ? 
+jobsSchedule=0/20 * * * * ? 
   #2015081401432
