--- a/settings.gradle
+++ b/settings.gradle
@@ -160,8 +160,8 @@ include 'forzieri-purchase'
 include 'tony-fetchstock'
 include 'railSoAtelier'
 include 'railSoAtelier-stock'
-include 'amfeed'
-include 'amfeed-stock'
+include 'vrients'
+include 'vrients-stock'
 include 'spinnaker-order'
 include 'havok'
 include 'havok-stock'
