--- a/levelgroup/src/main/resources/conf.properties
+++ b/levelgroup/src/main/resources/conf.properties
@@ -1,2 +1,5 @@
 #
 supplierId=2015092901551
+
+path=E:/LevelGroup/shangping.csv
+url=www.biancabianca.com/feed/adforstyle/TLG_AdforStyle_weitzman_NL.csv
