--- a/levelgroup/src/main/resources/conf.properties
+++ b/levelgroup/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 #
-supplierId=2015092901551
+supplierId=2015111701033
 
-path=E:/LevelGroup/shangping.csv
-url=http://www.biancabianca.com/feed/adforstyle/TLG_AdforStyle_weitzman_NL.csv
+path=E:/biancabianca/TLG_partner_weitzman_NL.txt
+url=http://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
