--- a/forzieri-stock/src/main/resources/param.properties
+++ b/forzieri-stock/src/main/resources/param.properties
@@ -18,3 +18,4 @@ time=60
 tokenurl=https://api.forzieri.com/v2/oauth/token
 #orderurl=https://api.forzieri.com/test/orders
 orderurl=https://api.forzieri.com/v2/orders
+producturl=https://api.forzieri.com/v2/products
