--- a/tony-purchase/src/main/resources/conf.properties
+++ b/tony-purchase/src/main/resources/conf.properties
@@ -13,3 +13,5 @@ token = d355cd8701b2ebc54d6c8811e03a3229
 #sandbox environment
 #url=http://ec2-52-31-11-83.eu-west-1.compute.amazonaws.com/ws/
 #Formal environment
+startDateOfTemp=
+endDateOfTemp=
