--- a/forzieri-purchase/src/main/resources/conf.properties
+++ b/forzieri-purchase/src/main/resources/conf.properties
@@ -18,3 +18,5 @@ time=60
 tokenurl=https://api.forzieri.com/v2/oauth/token
 #orderurl=https://api.forzieri.com/test/orders
 orderurl=https://api.forzieri.com/v2/orders
+startDateOfTemp=
+endDateOfTemp=
