--- a/levelgroup-purchase/src/main/resources/conf.properties
+++ b/levelgroup-purchase/src/main/resources/conf.properties
@@ -1,2 +1,10 @@
 #
 supplierId=2015092901551
+
+localFile=E:/1.txt
+remoteFile=NovOrder.txt
+host=ftp.thelevelgroup-ftp.com
+port=21
+user=googlepla@thelevelgroup-ftp.com
+password=tlg2014!
+
