iog-sop 更新库存时间

--- a/galiano-stock/src/main/resources/sop.properties
+++ b/galiano-stock/src/main/resources/sop.properties
@@ -3,9 +3,9 @@
 #服务地址
 HOST=@db.SOP.HOST@
 #supplier key
-APP_KEY=10
+APP_KEY=fff4f41b56fb4e829b864aa8b0ea5193
 #supplier secret
-APP_SECRET =5
+APP_SECRET =89ffb6f7f68b4f4c8b3f3ebaafba90bd
 
 
 
