--- a/galiano-stock/build.gradle
+++ b/galiano-stock/build.gradle
@@ -6,7 +6,7 @@
 dependencies {
     compile(
             project(':project-common'),
-
+            project(':iog-common-product'),
             project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
