--- a/iog-sop/build.gradle
+++ b/iog-sop/build.gradle
@@ -12,7 +12,7 @@ dependencies {
             "com.alibaba:fastjson:1.1.39",
             "commons-collections:commons-collections:3.2.1",
             "com.shangpin:openapi-api-sdk:3.0",
-
+            project(':iog-common-product') ,
             project(":project-framework")
     )
 }
