della-stock over

--- a/Della-stock/src/main/resources/conf.properties
+++ b/Della-stock/src/main/resources/conf.properties
@@ -1,3 +1,9 @@
 
-supplierId=2015111814071119
-filepath=E:\\lubaijiang\\DellaMartira.CSV
+supplierId=2015112001671
+#远端文件路径
+remoteFilePath=/MOSU/
+#远端文件名称
+remoteFileName=SKU_INVENTORY_STOCK.CSV
+#本地文件存放路径
+filepath=E:/lubaijiang/
+
