--- a/forzieri/src/main/resources/param.properties
+++ b/forzieri/src/main/resources/param.properties
@@ -2,6 +2,7 @@ path=/usr/local/app/forzieri/forzieri
 #path=F:/sossoso/forzieri
 url=http://www.forzieri.com/productfeed/shangpin/data_feed.csv
 supplierId=2015103001637
+#supplierId=201510300163711
 #test
 #supplierId=2015111200218
 supplierNo=S0000569
