更新库存修改

--- a/Della/build.gradle
+++ b/Della/build.gradle
@@ -14,10 +14,8 @@ dependencies {
 }
 
 jar {
-
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib, copyResources, copyResourcesToClasses
     exclude ("**/*.properties")
-
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
