tessabit拉取产品增加信息

--- a/tessabit-stock/src/main/resources/conf.properties
+++ b/tessabit-stock/src/main/resources/conf.properties
@@ -3,7 +3,7 @@ supplierId=2015091701503
 #FTP服务器hostname
 url=partners.tessabit.biz
 #FTP服务器根目录
-remotePath=/partner
+remotePath=/
 #FTP服务器端口
 port=21
 #用户名
