--- a/tessabit/src/main/resources/conf.properties
+++ b/tessabit/src/main/resources/conf.properties
@@ -12,5 +12,7 @@ user=defaultmasatoh1
 password=15201108!m
 #服务器端文件名(包括完整路径)
 serverFile=Products.xml
+pictureFile=Riferimenti.xml
 #本地文件名(包括完整路径)
 localFile=/usr/local/app/tessabit/tessabit.xml
+localPicture=/usr/local/app/tessabit/Riferimenti.xml
