--- a/linoricci/src/main/resources/conf.properties
+++ b/linoricci/src/main/resources/conf.properties
@@ -1,8 +1,4 @@
 #供应商ID
-supplierId=2015091701503
-#本地文件名:所有产品信息(包括完整路径)
-items=e:/atelier/items.xml
-#本地文件名：所有库存(包括完整路径)
-availability=e:/atelier/availability.xml
-#本地文件名：所有图片(包括完整路径)
-image=e:/atelier/image.xml
+#supplierId=2015091701503
+supplierId=201511261622
+url=http://79.61.138.184/ws_sito/ws_sito_p15.asmx/
